New Folder Structure

--- a/wolox-books/tsconfig.json
+++ b/wolox-books/tsconfig.json
@@ -19,8 +19,8 @@
       "dom"
     ],
     "paths": {
-      "@app/*": ["app/*"],
-      "@commons/*": ["app/commons/*"]
+      "@screens/*": ["app/screens/*"],
+      "@validators/*": ["validators/*"]
     }
   }
 }
