Registration Api integration

--- a/wolox-books/tsconfig.json
+++ b/wolox-books/tsconfig.json
@@ -19,7 +19,11 @@
       "dom"
     ],
     "paths": {
+      "@commons/*": ["commons/*"],
+      "@configs/*": ["configs/*"],
+      "@models/*": ["models/*"],
       "@screens/*": ["app/screens/*"],
+      "@services/*": ["services/*"],
       "@validators/*": ["validators/*"]
     }
   }
