--- a/wolox-books/angular.json
+++ b/wolox-books/angular.json
@@ -56,6 +56,13 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "es": {
+              "aot": true,
+              "outputPath": "dist/wolox-books-es/",
+              "i18nFile": "src/locale/messages.es.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "es"
             }
           }
         },
@@ -67,6 +74,9 @@
           "configurations": {
             "production": {
               "browserTarget": "wolox-books:build:production"
+            },
+            "es": {
+              "browserTarget": "wolox-books:build:es"
             }
           }
         },
